tests/type_visitor/type_visitor.exp
Error ---------------------------------------------------------------------------------------------------- testA.js:8:16

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Cannot
determine the type of this call expression. Please provide an annotation, e.g., by adding a type cast around this
expression. [signature-verification-failure]

   8| export default f(0, 0); // should just be missing for A, not B
                     ^^^^^^^


Error ---------------------------------------------------------------------------------------------------- testB.js:8:16

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Cannot
determine the type of this call expression. Please provide an annotation, e.g., by adding a type cast around this
expression. [signature-verification-failure]

   8| export default f(0, 0); // should just be missing for B, not A
                     ^^^^^^^


Error ---------------------------------------------------------------------------------------------------- testC.js:4:16

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Cannot
determine the type of this call expression. Please provide an annotation, e.g., by adding a type cast around this
expression. [signature-verification-failure]

   4| export default test(); // missing annotation error since T appears contravariantly.
                     ^^^^^^



Found 3 errors
